--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,6 @@
 <html>
     <h1>title</h1>
     <lable>enter the name</lable>
-    <button>proceed</button>
+    <lable>enter the psw</lable>
+    <button>submit</button>
 </html>
